--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,9 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
+{relx, [{release, {byzantine, "0.0.1"},
+         [byzantine]},
+
+        {dev_mode, true},
+        {include_erts, false},
+
+        {extended_start_script, true}]}.
