--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
-{relx, [{release, {byzantine, "0.0.1"},
-         [byzantine]},
-
+{deps, [
+        {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", "HEAD"}}
+       ]}.
+{relx, [{release, {byzantine, "0.0.1"}, [byzantine]},
         {dev_mode, true},
         {include_erts, false},
-
         {extended_start_script, true}]}.
