--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-        {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", "HEAD"}}
+        {cowboy, ".*", {git, "https://github.com/ninenines/cowboy.git", "HEAD"}},
+        {jsx, {git, "https://github.com/talentdeficit/jsx.git", {branch, "v2.8.0"}}}
        ]}.
 {relx, [{release, {byzantine, "0.0.1"}, [byzantine]},
         {dev_mode, true},
